Added footer section

--- a/TaxiCabService/index.html
+++ b/TaxiCabService/index.html
@@ -138,5 +138,42 @@
         <h1 class="callback__description">We are ready to take your call 24 hours, 7days!</h1>
         <h2 class="callback__number header-number">+123 4567 8900</h2>
     </section>
+    <footer class="footer">
+        <ul class="footer-menu-list">
+            <li class="footer-menu-item">
+                <h1 class="footer-menu-heading">About cab hub</h1>
+                <div class="yellow-bottom-line"></div>
+                <p class="footer-menu-description">Quisque sollicitudin feugiat risus, eu <br> posuere ex euismod eu. Phasellus hen- <br> drerit, massa efficitur.Quisque sollicitu- <br> din feugiat risus, eu posuere ex euis- <br> mod eu.</p>
+                <div class="social-list">
+                    <a href="#" class="social-link bg-ft-1"></a>
+                    <a href="#" class="social-link bg-ft-2"></a>
+                    <a href="#" class="social-link bg-ft-3"></a>
+                    <a href="#" class="social-link bg-ft-4"></a>
+                </div>
+            </li>
+            <li class="footer-menu-item">
+                <h1 class="footer-menu-heading">Download</h1>
+                <div class="yellow-bottom-line"></div>
+                <p class="footer-menu-description">Quisque sollicitudin feugiat risus, eu posu- <br> ere ex euismod eu. Phasellus hendrerit,</p>
+                <div class="download-list">
+                    <a href="#" class="download-link">Android Users</a>
+                    <a href="#" class="download-link">IOS Users</a>
+                </div>
+            </li>
+            <li class="footer-menu-item">
+                <h1 class="footer-menu-heading">Contact</h1>
+                <div class="yellow-bottom-line"></div>
+                <ul class="contact-list">
+                    <li class="contact-item">+123, Main Street, Your City, New Your, USA 789456</li>
+                    <li class="contact-item">+123 4567 8900</li>
+                    <li class="contact-item">free@psdfreebies.com</li>
+                    <li class="contact-item">www.psdfreebies.com</li>
+                </ul>
+            </li>
+        </ul>
+        <div class="copyright-container">
+            <p class="copyright">Copyright © 2015 PSDfreebies.com</p>
+        </div>
+    </footer>
 </body>
 </html>
